language/move-lang/tests/move_check/naming/invalid_call_lhs_complex_expression.exp
error: 

   ┌── tests/move_check/naming/invalid_call_lhs_complex_expression.move:3:9 ───
   │
 3 │         (if (true) 5 else 0)();
   │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid function call
   ·
 3 │         (if (true) 5 else 0)();
   │         -------------------- Expected: a name, a dotted Module access, or dotted access of an expression
   │

error: 

   ┌── tests/move_check/naming/invalid_call_lhs_complex_expression.move:4:9 ───
   │
 4 │         (while (false) {})(0, 1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid function call
   ·
 4 │         (while (false) {})(0, 1);
   │         ------------------ Expected: a name, a dotted Module access, or dotted access of an expression
   │

